--- a/.gitignore
+++ b/.gitignore
@@ -8,6 +8,15 @@
 .AppleDouble
 .LSOverride
 
+.DS_Store
+.idea
+.vagrant
+bootstrap.sh
+VagrantFile
+bower_components/
+node_modules
+package-lock.json
+
 # Icon must end with two \r
 Icon
 
