--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "express-flash": "0.0.2",
     "express-session": "^1.17.0",
     "mongoose": "^5.8.11",
+    "node": "^18.9.0",
     "nodemon": "^2.0.19",
     "nunjucks": "^3.2.0",
     "request": "^2.88.0"
