--- a/package.json
+++ b/package.json
@@ -20,12 +20,15 @@
   },
   "homepage": "https://github.com/ZackaryBrown30/Bart-App#readme",
   "dependencies": {
+    "@trycourier/courier": "^3.15.0",
+    "dotenv": "^16.0.2",
     "ejs": "^3.0.1",
     "express": "^4.17.1",
     "express-flash": "0.0.2",
     "express-session": "^1.17.0",
     "mongoose": "^5.8.11",
     "node": "^18.9.0",
+    "node-fetch": "^2.6.7",
     "nodemon": "^2.0.20",
     "nunjucks": "^3.2.0",
     "request": "^2.88.0"
